Introduce `CloudbedsAccessTokenService` for centralized access token management and caching
- Add `CloudbedsAccessTokenService` to handle token refresh and caching logic for Cloudbeds API and WebSocket authentication.
- Refactor `CloudbedsDataInsightsClient` and `CloudbedsWebSocketService` to use token service, replacing cookie-based token handling.
- Add JWT parsing with `parseJwtExp` to extract expiry claims for token refresh optimization.
- Replace `extractCookieValue` and redundant refresh logic with reusable token service approach.
- Update unit tests to validate new access token behavior and error handling.