@@ -3,6 +3,7 @@ package com.macbackpackers.services;
 import java.time.LocalDate;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -23,7 +24,7 @@ import com.macbackpackers.dao.WordPressDAO;
 @Service
 public class HousekeepingStatusService {
 
-    private static final List<String> EXCLUDED_ROOM_TYPES = List.of( "LT_MALE", "LT_FEMALE", "LT_MIXED", "OVERFLOW", "PAID BEDS" );
+    private static final List<String> EXCLUDED_ROOM_TYPES = Arrays.asList( "LT_MALE", "LT_FEMALE", "LT_MIXED", "OVERFLOW", "PAID BEDS" );
 
     @Autowired
     private WordPressDAO dao;
